# Structural-Drawings-Analysis-AI-Model

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-ci.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
app/: main.py
app/api/: router.py
app/core/: config.py  logger.py
app/dataset/: loader.py  pdf_processor.py
app/exporters/: json_engine.py
app/models/detection/: inference.py  train.py
app/models/ocr/: service.py
app/parsing/: regex_parser.py
app/pipeline/: orchestrator.py
app/schemas/: api.py  engineering.py
app/spatial/: engine.py  geometry.py
app/synthetic/: components.py  export.py  generator.py
config/: default.yaml
data/synthetic/labels/: synthetic_draft_0005.txt  synthetic_draft_0007.txt  synthetic_draft_0008.txt  synthetic_draft_0009.txt  synthetic_draft_0012.txt  synthetic_draft_0013.txt  synthetic_draft_0014.txt  synthetic_draft_0017.txt  synthetic_draft_0018.txt  synthetic_draft_0019.txt  synthetic_draft_0022.txt  synthetic_draft_0023.txt  synthetic_draft_0025.txt  synthetic_draft_0028.txt  synthetic_draft_0031.txt  synthetic_draft_0032.txt  synthetic_draft_0034.txt  synthetic_draft_0035.txt  synthetic_draft_0036.txt  synthetic_draft_0037.txt  synthetic_draft_0038.txt  synthetic_draft_0040.txt  synthetic_draft_0041.txt  synthetic_draft_0044.txt  synthetic_draft_0046.txt  synthetic_draft_0048.txt  (+25 more)
data/yolo/: dataset.yaml
scripts/: generate_synthetic_data.py  prepare_dataset.py  retrain_pipeline.py  test_ocr.py  train_detection.py
tests/: test_api.py  test_parser.py
(+151 files in other folders)
